--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -26,8 +26,12 @@ button{
 }
 
 .msg{
-    height: 500px;
-    width: 30rem;
+    height: 800px;
+    width: 40rem;
     border: 2px solid black;
     padding: 20px 20px;
+}
+
+#msg{
+    font-size: 18px;
 }
